# sc_open

./: CMakeLists.txt  README.md  old_makefile
docs/: sc_users_guide.odt
examples/: equipsim1.sc  example1.sc  example2.sc  example3.sc  hostsim1.sc
headers/: binary_buffer.h  buffer.h  commands.h  debug.h  error.h  externs.h  fatal.h  globals.h  hsms.h  include.h  log.h  parse.h  pp_error.h  pragma.h  proto.h  reference.h  sc.h  secs.h  server.h  t.h  tokens.h  trace.h  variables.h  version.h  warning.h
source/: binary_buffer.c  break.c  buffer.c  commands.c  continue.c  convert_data.c  debug.c  define.c  define_array.c  define_xref.c  delete.c  error.c  execute.c  expression.c  fatal.c  for.c  gosub.c  goto.c  handler.c  hsms.c  if.c  io.c  label.c  let.c  local_var.c  log.c  open.c  parse.c  port.c  pp_error.c  pragma.c  print.c  program.c  proto.c  proto_timers.c  recv_hsms.c  recv_secs.c  resume.c  sc.c  secs.c  (+23 more)
